--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,193 +1,24 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import "fuentes";
+@import "generales";
+@import "titulos";
+@import "nav";
+@import"eventos";
+@import "redes";
+@import "grilla";
+@import "footer";
+@import "grillas";
+@import "envolturas";
 
 
-* {
-    padding: 0%;
-    margin: 0%;
-}
-
-body {
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-    font-weight: bolder;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    flex-wrap: wrap
-}
-
-header {
-    font-size: large;
-    display: grid;
-    justify-content: center;
-}
 .btn.btn-primary{
     background-color:rgb(102, 139, 138) ;
     border: none;
-}
-h2, h3 {
-    color: rgb(172, 78, 47);
-}
-
-nav ul li {
-    list-style-type: none;
-}
-
-ul li{
-    list-style-type: none; 
-}
-
-.sitios,  .loguito {
-    display: flex;
-    font-display: flex;
-    justify-content: center;
-
-}
-
-
-nav ul, h1, .elParrafo {
-    color: rgb(13, 63, 60);
-}
-
-.elParrafo {
-    border: 1em solid white;
-}
-
-a {
-    color: rgb(172, 78, 47);
-    text-decoration: none;
-    margin-left: 0.5em;
-
-}
-
-footer {
-    padding: 3em;
-    background-color: rgb(151, 175, 175);
-    margin-bottom: 0;
-    margin-top: 1.5em;
-}
-
-.loguito {
-    width: 100px;
-    height: 100px;
-}
-
-#flechita{
-    width: 100px;
-    height: 100px;
-    border: none;
-}
-.redes {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-items: end
-}
-
-.container-fluid{
-    background-color: rgb(151, 175, 175) ;
 }
 
 .avena {
     width: 600px;
     height: 50px;
     border: none;
-}
-
-.event{
-    width:350px;
-    height: 150px;
-}
-/*declar el área de grilla*/
-
-header {
-    grid-area: header;
-}
-
-.imagenUno {
-    grid-area: imagenu;
-}
-
-h1 {
-    grid-area: huno;
-}
-
-.elParrafo {
-    grid-area: elparrafo;
-}
-
-.eventos {
-    grid-area: eventos;
-}
-
-.redes {
-    grid-area: redes;
-}
-
-footer {
-    grid-area: footer;
-}
-
-.envoltura {
-    background-color: rgb(151, 175, 175);
-    margin-bottom: 1.5em;
-    display: grid;
-    grid-template-areas:
-        "header"
-        "imagenu"
-        "huno"
-        "elparrafo"
-        "eventos"
-        "redes"
-        "footer";
-    gap: 20px;
-}
-
-
-
-.imagenUno {
-    background-color: rgb(252, 191, 169);
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    gap: 15px;
-    justify-items: center;
-}
-
-h1 {
-    background-color: rgb(252, 191, 169);
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    gap: 15px;
-    justify-items: center;
-}
-
-.elParrafo {
-    background-color: rgb(252, 191, 169);
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    gap: 15px;
-    justify-items: center;
-}
-
-.eventos {
-    background-color: rgb(252, 191, 169);
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    gap: 15px;
-    justify-items: center;
-}
-
-.redes {
-    background-color: rgb(252, 191, 169);
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    gap: 15px;
-    justify-items: center;
 }
 
 img {
@@ -197,183 +28,17 @@ img {
     margin-top: 5em;
 }
 
-.icon {
-    width: 60px;
-    height: 60px;
-    border: none;
+footer {
+    padding: 3em;
+    background-color: rgb(151, 175, 175);
+    margin-bottom: 0;
+    margin-top: 1.5em;
 }
-
 footer {
     margin-top: 0;
 }
+@import "mediaq";
 
-@media (min-width:500px) {
-    .envoltura {
-        margin-bottom: 1.5em;
-        display: grid;
-        grid-template-areas:
-            "header    header"
-            "imagenu   imagenu"
-            "huno      huno"
-            "elparrafo elparrafo"
-            "eventos   redes"
-            "footer    footer";
-        gap: 20px;
-
-    }
-
-    .sitios, .loguito {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    h1, .elParrafo {
-
-        border: 0.5em solid rgb(62, 85, 85);
-    }
-
-    h2 {
-        text-decoration: underline;
-    }
-
-    .redes {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-        align-items: flex-end
-    }
-
-    img {
-        width: 350px;
-        height: 300px;
-    }
-
-    .event{
-        width:1000px;
-        height: 350px;
-    }
-
-    footer {
-        margin-top: 0;
-    }
-
-}
-
-
-
-@media (min-width:768px) {
-    .envoltura {
-        background: rgb(252, 191, 169);
-        background: radial-gradient(circle, rgba(178, 167, 230, 1) 0%, rgba(57, 129, 154, 1) 100%);
-        margin-bottom: 1.5em;
-        grid-template-columns: 1fr 4fr 1fr;
-        grid-template-areas:
-            "header    header       header"
-            "imagenu   imagenu      imagenu"
-            "huno      huno         huno"
-            "elparrafo elparrafo    elparrafo"
-            "eventos   eventos      redes"
-            "footer    footer       footer";
-        gap: 20px;
-    }
-
-    a {
-        color: black;
-    }
-    .container-fluid{
-        background: radial-gradient(circle, rgba(178, 167, 230, 1) 0%, rgba(57, 129, 154, 1) 100%);
-    }
-    h1 {
-        color: black;
-        border: 3px solid white;
-    }
-
-    .elParrafo, h2 {
-        color: darkslategrey;
-    }
-
-    h2 {
-        text-decoration: underline;
-    }
-
-    .elParrafo {
-        border: 3em solid darkslategrey;
-    }
-
-    h1 {
-        background-color: rgb(252, 191, 169);
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
-        gap: 15px;
-        justify-items: center;
-    }
-
-    .elParrafo {
-        background-color: rgb(228, 144, 114);
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1fr;
-        gap: 15px;
-        justify-items: center;
-    }
-
-    .loguito {
-        border: 0.5em solid rgb(252, 191, 169);
-    }
-
-    h3 {
-        color: black;
-    }
-
-    footer {
-        margin-top: 1.5em;
-        background: radial-gradient(circle, rgba(178, 167, 230, 1) 0%, rgba(57, 129, 154, 1) 100%);
-    }
-}
-
-@media(min-width:1024px) {
-    body {
-        background-color: rgb(184, 199, 199);
-    }
-
-    .sitios {
-        margin: 2em 10em 2em 10em;
-    }
-    .btn.btn-primary{
-        background-color:rgb(91, 74, 100) ;
-        border: none;
-    }
-    .imagenUno,  h1, .elParrafo,  .eventos,.redes {
-        background-color: rgb(184, 199, 199);
-    }
-
-    .loguito {
-        border: 0.5em solid rgb(252, 191, 169);
-    }
-
-    .elParrafo, h2 {
-        color: rgb(104, 60, 85);
-    }
-
-    .elParrafo {
-        border: 1em solid rgb(241, 145, 110);
-    }
-
-    h1 {
-        color: rgb(133, 46, 95);
-    }
-
-    img {
-        width: 475px;
-        height: 400px;
-        margin-top: 20px;
-    }
-    .event{
-        width:1050px;
-        height: 350px;
-    }
-}
 
 /*declarar grid haz tu pedido*/
 .hDos {
