--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,25 +6,9 @@
 @import "redes";
 @import "grillas";
 @import "envolturas";
+@import "contenidoindex";
 
 
-.btn.btn-primary {
-    background-color: rgb(102, 139, 138);
-    border: none;
-}
-
-.avena {
-    width: 600px;
-    height: 50px;
-    border: none;
-}
-
-img {
-    width: 300px;
-    height: 250px;
-    border: 0.5em solid black;
-    margin-top: 5em;
-}
 
 footer {
     padding: 3em;
