--- a/sass/_envolturagaleria.scss
+++ b/sass/_envolturagaleria.scss
@@ -1,5 +1,6 @@
 .envolturaTres {
     background-color: rgb(151, 175, 175);
+    margin-right: 0em;
     margin-bottom: 1.5em;
     display: grid;
     grid-template-areas:
